Modificación del IntentService de notificaciones
- Recuperación de eventos cada minuto y notificar al usuario de su
existencia

--- a/libutilities/src/main/res/values/strings.xml
+++ b/libutilities/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">libUtilities</string>
     <string name="botonAceptar">Aceptar</string>
     <string name="botonCancelar">Cancelar</string>
+    <string name="nuevoEvento">Nuevo evento</string>
+
 </resources>
